# breezier

./: BreezeConfig.cmake.in  CMakeLists.txt
kdecoration/: CMakeLists.txt  breeze.h  breeze.json  breezebutton.h  breezedecoration.cpp  breezedecoration.h  breezeexceptionlist.h  breezesettings.kcfgc  breezesettingsprovider.cpp  breezesettingsprovider.h  breezier.json  breeziersettingsdata.kcfg
kdecoration/config/: CMakeLists.txt  breezeconfigwidget.h  breezeexceptionmodel.h  breezierdecorationconfig.desktop  kcm_breezedecoration.cpp  kcm_breezierdecoration.json
kstyle/: breezehelper.cpp  breezehelper.h
kstyle/config/: main.cpp
libbreezecommon/: CMakeLists.txt
